[package]
name = "passbolt-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "~1.0.78"
pgp = "~0.7.2"
reqwest = { version = "~0.11.9", features = ["cookies"] }
chrono = "~0.4.19"
urlencoding = "~2.1.0"
anyhow = "~1.0.53"
tokio = { version = "~1.0.0", features = ["rt-multi-thread", "macros"] }